--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "framer-motion": "^12.24.12",
     "lucide-react": "^0.562.0",
     "next": "14.2.35",
     "react": "^18",
